--- a/contact.html
+++ b/contact.html
@@ -5,13 +5,13 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>UpConstruction Bootstrap Template - Contact</title>
+  <title>VB Inženjering - Kontakt</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/logoIcon.ico" rel="icon">
+  <link href="assets/img/apple-touch-icon-120x120.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -39,37 +39,34 @@
     <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
 
       <a href="index.html" class="logo d-flex align-items-center">
-
-        <h1>UpConstruction<span>.</span></h1>
+        <img src="assets/img/logo-removebg.png" alt="Logo VB Inženjering-a" style="height: 60px; margin-right: 10px;">
+        <h1>VB INŽENJERING</h1>
       </a>
 
       <i class="mobile-nav-toggle mobile-nav-show bi bi-list"></i>
       <i class="mobile-nav-toggle mobile-nav-hide d-none bi bi-x"></i>
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="services.html">Services</a></li>
-          <li><a href="projects.html">Projects</a></li>
-          <li><a href="blog.html">Blog</a></li>
-          <li class="dropdown"><a href="#"><span>Dropdown</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
+          <li><a href="index.html">Početna stranica</a></li>
+          <li><a href="services.html">Usluge</a></li>
+          <!--<li><a href="projects.html">Projekti</a></li>-->
+          <li class="dropdown"><a href="#"><span>Projekti</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
             <ul>
-              <li><a href="#">Dropdown 1</a></li>
-              <li class="dropdown"><a href="#"><span>Deep Dropdown</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
+              <li><a href="#">Montažni objekti</a></li>
+              <li class="dropdown"><a href="#"><span>Čelične konstrukcije</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
                 <ul>
-                  <li><a href="#">Deep Dropdown 1</a></li>
-                  <li><a href="#">Deep Dropdown 2</a></li>
-                  <li><a href="#">Deep Dropdown 3</a></li>
-                  <li><a href="#">Deep Dropdown 4</a></li>
-                  <li><a href="#">Deep Dropdown 5</a></li>
+                  <li><a href="#">Hala - 3D arhitektura</a></li>
+                  <li><a href="#">Hala - 3D konstrukcija</a></li>
+                  <li><a href="#">Čelična nadstrešnica</a></li>
                 </ul>
               </li>
-              <li><a href="#">Dropdown 2</a></li>
-              <li><a href="#">Dropdown 3</a></li>
-              <li><a href="#">Dropdown 4</a></li>
+              <li><a href="#">Betonske konstrukcije</a></li>
+              <li><a href="#">Sanacije i reparature</a></li>
+              <li><a href="#">3D vizuelizacija enterijera i eksterijera</a></li>
             </ul>
           </li>
-          <li><a href="contact.html" class="active">Contact</a></li>
+          <li><a href="about.html">O nama</a></li>
+          <li><a href="contact.html" class="active">Kontakt</a></li>
         </ul>
       </nav><!-- .navbar -->
 
@@ -79,13 +76,13 @@
   <main id="main">
 
     <!-- ======= Breadcrumbs ======= -->
-    <div class="breadcrumbs d-flex align-items-center" style="background-image: url('assets/img/breadcrumbs-bg.jpg');">
+    <div class="breadcrumbs d-flex align-items-center" style="background-image: url('assets/img/background-contact.png');">
       <div class="container position-relative d-flex flex-column align-items-center" data-aos="fade">
 
-        <h2>Contact</h2>
+        <h2>Kontaktirajte nas</h2>
         <ol>
-          <li><a href="index.html">Home</a></li>
-          <li>Contact</li>
+          <li><a href="index.html">Početna stranica</a></li>
+          <li>Kontakt</li>
         </ol>
 
       </div>
@@ -99,24 +96,24 @@
           <div class="col-lg-6">
             <div class="info-item  d-flex flex-column justify-content-center align-items-center">
               <i class="bi bi-map"></i>
-              <h3>Our Address</h3>
-              <p>A108 Adam Street, New York, NY 535022</p>
+              <h3>Naša adresa</h3>
+              <p>Beograd</p>
             </div>
           </div><!-- End Info Item -->
 
           <div class="col-lg-3 col-md-6">
             <div class="info-item d-flex flex-column justify-content-center align-items-center">
               <i class="bi bi-envelope"></i>
-              <h3>Email Us</h3>
-              <p>contact@example.com</p>
+              <h3>Naš e-mail</h3>
+              <p>info.vbinzenjering@gmail.com</p>
             </div>
           </div><!-- End Info Item -->
 
           <div class="col-lg-3 col-md-6">
             <div class="info-item  d-flex flex-column justify-content-center align-items-center">
               <i class="bi bi-telephone"></i>
-              <h3>Call Us</h3>
-              <p>+1 5589 55488 55</p>
+              <h3>Pozovite nas</h3>
+              <p>064/217-5474</p>
             </div>
           </div><!-- End Info Item -->
 
@@ -125,31 +122,33 @@
         <div class="row gy-4 mt-1">
 
           <div class="col-lg-6 ">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0" style="border:0; width: 100%; height: 384px;" allowfullscreen></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d175714.7891158713!2d20.422468199999997!3d44.81534404999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x475a7aa3d7b53fbd%3A0x1db8645cf2177ee4!2z0JHQtdC-0LPRgNCw0LQsINCh0YDQsdC40ZjQsA!5e1!3m2!1ssr!2sba!4v1754134501795!5m2!1ssr!2sba" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
           </div><!-- End Google Maps -->
 
           <div class="col-lg-6">
-            <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+           <!-- <form action="forms/contact.php" method="post" role="form" class="php-email-form"> -->
+            <form action="forms/sendmail.php" method="post" role="form" class="php-email-form">
+              <p>Imate građevinske radove u planu? Pošaljite nam poruku i dogovorićemo se.</p>
               <div class="row gy-4">
                 <div class="col-lg-6 form-group">
-                  <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
+                  <input type="text" name="name" class="form-control" id="name" placeholder="Vaše ime i prezime*" required>
                 </div>
                 <div class="col-lg-6 form-group">
-                  <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required>
+                  <input type="text" class="form-control" name="phone" id="phone" placeholder="Vaš broj telefona*" required>
                 </div>
               </div>
               <div class="form-group">
-                <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required>
+                <input type="email" class="form-control" name="email" id="email" placeholder="Vaša e-mail adresa*" required>
               </div>
               <div class="form-group">
-                <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
+                <textarea class="form-control" name="message" rows="6" placeholder="Poruka*" required></textarea>
               </div>
               <div class="my-3">
-                <div class="loading">Loading</div>
-                <div class="error-message"></div>
-                <div class="sent-message">Your message has been sent. Thank you!</div>
+                <div class="loading">Sačekajte...</div>
+                <div class="error-message">Greška! Popunite sva polja i pokušajte ponovo.</div>
+                <div class="sent-message">Poruka je uspješno poslata! Hvala na interesovanju.</div>
               </div>
-              <div class="text-center"><button type="submit">Send Message</button></div>
+              <div class="text-center"><button type="submit">Pošalji</button></div>
             </form>
           </div><!-- End Contact Form -->
 
@@ -167,66 +166,30 @@
       <div class="container">
         <div class="row">
 
-          <div class="col-lg-4 col-md-6">
+          <div class="col-lg-3 col-md-6">
             <div class="footer-info">
-              <h3>UpConstruction</h3>
-              <p>
-                A108 Adam Street <br>
-                NY 535022, USA<br><br>
-                <strong>Phone:</strong> +1 5589 55488 55<br>
-                <strong>Email:</strong> info@example.com<br>
-              </p>
-              <div class="social-links d-flex mt-3">
-                <a href="#" class="d-flex align-items-center justify-content-center"><i class="bi bi-twitter"></i></a>
-                <a href="#" class="d-flex align-items-center justify-content-center"><i class="bi bi-facebook"></i></a>
-                <a href="#" class="d-flex align-items-center justify-content-center"><i class="bi bi-instagram"></i></a>
-                <a href="#" class="d-flex align-items-center justify-content-center"><i class="bi bi-linkedin"></i></a>
-              </div>
+              <h3>VB Inženjering</h3>
             </div>
           </div><!-- End footer info column-->
 
-          <div class="col-lg-2 col-md-3 footer-links">
-            <h4>Useful Links</h4>
-            <ul>
-              <li><a href="#">Home</a></li>
-              <li><a href="#">About us</a></li>
-              <li><a href="#">Services</a></li>
-              <li><a href="#">Terms of service</a></li>
-              <li><a href="#">Privacy policy</a></li>
-            </ul>
+          <div class="col-lg-2 col-md-4 footer-links">
+            <strong><a href="index.html">Početna stranica</a></strong>
           </div><!-- End footer links column-->
 
-          <div class="col-lg-2 col-md-3 footer-links">
-            <h4>Our Services</h4>
-            <ul>
-              <li><a href="#">Web Design</a></li>
-              <li><a href="#">Web Development</a></li>
-              <li><a href="#">Product Management</a></li>
-              <li><a href="#">Marketing</a></li>
-              <li><a href="#">Graphic Design</a></li>
-            </ul>
+          <div class="col-lg-2 col-md-4 footer-links">
+            <strong><a href="services.html">Usluge</a></strong>
           </div><!-- End footer links column-->
 
-          <div class="col-lg-2 col-md-3 footer-links">
-            <h4>Hic solutasetp</h4>
-            <ul>
-              <li><a href="#">Molestiae accusamus iure</a></li>
-              <li><a href="#">Excepturi dignissimos</a></li>
-              <li><a href="#">Suscipit distinctio</a></li>
-              <li><a href="#">Dilecta</a></li>
-              <li><a href="#">Sit quas consectetur</a></li>
-            </ul>
+          <div class="col-lg-2 col-md-4 footer-links">
+            <strong><a href="projects.html">Projekti</a></strong>
           </div><!-- End footer links column-->
 
-          <div class="col-lg-2 col-md-3 footer-links">
-            <h4>Nobis illum</h4>
-            <ul>
-              <li><a href="#">Ipsam</a></li>
-              <li><a href="#">Laudantium dolorum</a></li>
-              <li><a href="#">Dinera</a></li>
-              <li><a href="#">Trodelas</a></li>
-              <li><a href="#">Flexo</a></li>
-            </ul>
+          <div class="col-lg-2 col-md-4 footer-links">
+            <strong><a href="about.html">O nama</a></strong>
+          </div><!-- End footer links column-->
+
+          <div class="col-lg-1 col-md-4 footer-links">
+            <strong><a href="contact.html">Kontakt</a></strong>
           </div><!-- End footer links column-->
 
         </div>
@@ -236,10 +199,11 @@
     <div class="footer-legal text-center position-relative">
       <div class="container">
         <div class="copyright">
-          &copy; Copyright <strong><span>UpConstruction</span></strong>. All Rights Reserved
-        </div>
-        <div class="credits">
-          Custamized by <a href="#">Karim Nasser</a>
+          <p>info.vbinzenjering@gmail.com</p>
+          <p>064/217-5474</p>
+          <p>Beograd, Srbija</p>
+
+          <strong><span>VB Inženjering, 2025.</span></strong>
         </div>
       </div>
     </div>
@@ -262,6 +226,31 @@
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
+
+  <script>
+    document.addEventListener("DOMContentLoaded", function () {
+      const submenus = document.querySelectorAll(".navbar .dropdown .dropdown");
+
+      submenus.forEach(function (submenu) {
+        submenu.addEventListener("mouseenter", function () {
+          const submenuList = submenu.querySelector("ul");
+
+          submenuList.style.left = "100%";
+          submenuList.style.right = "auto";
+
+          requestAnimationFrame(() => {
+            const rect = submenuList.getBoundingClientRect();
+
+            if (rect.right > window.innerWidth) {
+              submenuList.style.left = "auto";
+              submenuList.style.right = "100%";
+            }
+          });
+        });
+      });
+    });
+  </script>
+
 
 </body>
 
