dodata stranica Projekti

--- a/contact.html
+++ b/contact.html
@@ -10,8 +10,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/logoIcon.ico" rel="icon">
-  <link href="assets/img/apple-touch-icon-120x120.png" rel="apple-touch-icon">
+  <link href="assets/img/logo/logoIcon.ico" rel="icon">
+  <link href="assets/img/logo/apple-touch-icon-120x120.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -39,7 +39,7 @@
     <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
 
       <a href="index.html" class="logo d-flex align-items-center">
-        <img src="assets/img/logo-removebg.png" alt="Logo VB Inženjering-a" style=" margin-right: 10%;">
+        <img src="assets/img/logo/logo-removebg.png" alt="Logo VB Inženjering-a" style=" margin-right: 10%;">
         <h1 style="font-size: 4vh;">VB INŽENJERING</h1>
       </a>
 
@@ -66,7 +66,7 @@
             </ul>
           </li>
           <li><a href="about.html">O nama</a></li>
-          <li><a href="contact.html" class="active">Kontakt</a></li>
+          <li><a href="contact.html">Kontakt</a></li>
         </ul>
       </nav><!-- .navbar -->
 
