--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/logoIcon.ico" rel="icon">
-  <link href="assets/img/apple-touch-icon-120x120.png" rel="apple-touch-icon">
+  <link href="assets/img/logo/logoIcon.ico" rel="icon">
+  <link href="assets/img/logo/apple-touch-icon-120x120.png" rel="apple-touch-icon">
 
 
   <!-- Google Fonts -->
@@ -37,7 +37,7 @@
     <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
 
       <a href="index.html" class="logo d-flex align-items-center">
-        <img src="assets/img/logo-removebg.png" alt="Logo VB Inženjering-a" style=" margin-right: 10%;">
+        <img src="assets/img/logo/logo-removebg.png" alt="Logo VB Inženjering-a" style=" margin-right: 10%;">
         <h1 style="font-size: 4vh;">VB INŽENJERING</h1>
       </a>
 
@@ -47,7 +47,6 @@
         <ul>
           <li><a href="index.html">Početna stranica</a></li>
           <li><a href="services.html">Usluge</a></li>
-          <!--<li><a href="projects.html">Projekti</a></li>-->
           <li class="dropdown"><a href="#"><span>Projekti</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
             <ul>
               <li><a href="#">Montažni objekti</a></li>
@@ -264,7 +263,7 @@
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
             <div class="service-item position-relative">
               <div class="icon">
-                <i class="fa-solid fa-arrow-up-from-ground-water"></i>
+                <i class="fa-solid fa-hammer"></i>
               </div>
               <h3>Konstrukcija</h3>
               <p>Projektovanje nosivih konstrukcija – betonskih, čeličnih, drvenih i montažnih. Primenjujemo najnovije standarde i softvere za proračun statike i dinamike kako bismo obezbedili sigurnost i ekonomičnost konstrukcije.</p>
@@ -286,7 +285,7 @@
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="400">
             <div class="service-item position-relative">
               <div class="icon">
-                <i class="fa-solid fa-trowel-bricks"></i>
+                <i class="fa-solid fa-sack-dollar"></i>
               </div>
               <h3>Procena troškova</h3>
               <p>Precizno i detaljno sastavljanje predmera radova i materijala, kao i finansijskih procena, koje omogućavaju pravovremeno planiranje i kontrolu troškova.</p>
@@ -296,14 +295,14 @@
 
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="600">
             <div class="service-item position-relative">
-              <img src="assets/img/logoDesign.png" style="width: 80%; height: 85%; margin-left: 10%; margin-top:10%; ">
+              <img src="assets/img/logo/logoDesign.png" style="width: 80%; height: 85%; margin-left: 10%; margin-top:10%; ">
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="500">
             <div class="service-item position-relative">
               <div class="icon">
-                <i class="fa-solid fa-helmet-safety"></i>
+                <i class="fa-solid fa-cubes"></i>
               </div>
               <h3>3D vizuelizacija</h3>
               <p>Napredne 3D vizualizacije i BIM modeli koji omogućavaju investitorima i izvođačima jasnu predstavu o projektu. Olakšavaju komunikaciju i identifikaciju potencijalnih problema pre početka radova.</p>
@@ -314,7 +313,7 @@
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="600">
             <div class="service-item position-relative">
               <div class="icon">
-                <i class="fa-solid fa-arrow-up-from-ground-water"></i>
+                <i class="fa-solid fa-hammer"></i>
               </div>
               <h3>Izvođenje radova</h3>
               <p>Organizacija i upravljanje građevinskim radovima, kontrola kvaliteta i rokova, kao i koordinacija svih učesnika na gradilištu.</p>
@@ -325,7 +324,7 @@
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="600">
             <div class="service-item position-relative">
               <div class="icon">
-                <i class="fa-solid fa-arrow-up-from-ground-water"></i>
+                <i class="fa-solid fa-helmet-safety"></i>
               </div>
               <h3>Tehnički nadzor</h3>
               <p>Stručni građevinski nadzor tokom izvođenja radova kako bi se osigurao kvalitet, usklađenost sa projektom i standardima, te pravovremeno rešavanje tehničkih pitanja.</p>
@@ -336,7 +335,7 @@
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="600">
             <div class="service-item position-relative">
               <div class="icon">
-                <i class="fa-solid fa-arrow-up-from-ground-water"></i>
+                <i class="fa-solid fa-cart-shopping"></i>
               </div>
               <h3>Prodaja materijala</h3>
               <p>Bavimo se prodajom visokokvalitetnih hidroizolacionih materijala za građevinsku industriju. Ponosni smo što smo jedini zvanični predstavnici u Evropi kompanije Great Ocean Waterproof Technology Co., Ltd., jedne od najvećih i najrenomiranijih kineskih fabrika u oblasti hidroizolacija.</p>
@@ -354,178 +353,73 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-header">
-          <h2>Projekti</h2>
+          <h2>Najnoviji projekti</h2>
           <p>Upoznajte se sa našim radovima kroz izvedene projekte i uverite se u posvećenost koju ulažemo u svaki detalj. Filtrirajte projekte po tipu da pronađete ono što vas najviše zanima ili pregledajte sve dosadašnje: </p>
           <br><a href="projects.html">SVI PROJEKTI</a>
         </div>
 
 
-        <div class="portfolio-isotope" data-portfolio-filter=".filter-design" data-portfolio-layout="masonry" data-portfolio-sort="original-order">
+        <div class="portfolio-isotope" data-portfolio-filter=".filter-celik" data-portfolio-layout="masonry" data-portfolio-sort="original-order">
           <ul class="portfolio-flters" data-aos="fade-up" data-aos-delay="100">
-            <li data-filter=".filter-design" class="filter-active">Čelične konstrukcije</li>
-            <li data-filter=".filter-remodeling">Betonske konstrukcije</li>
-            <li data-filter=".filter-construction">Montažni objekti</li>
-            <li data-filter=".filter-repairs">Sanacije i reparature</li>
-            <li data-filter=".filter-visualizations">3D vizuelizacije</li>
+            <li data-filter=".filter-celik" class="filter-active">Čelične konstrukcije</li>
+            <li data-filter=".filter-beton">Betonske konstrukcije</li>
+            <li data-filter=".filter-montazni">Montažni objekti</li>
+            <li data-filter=".filter-sanacije">Sanacije i reparature</li>
+            <li data-filter=".filter-vizualizacije">3D vizuelizacije</li>
           </ul><!-- End Projects Filters -->
-<br>
+          <br>
           <div class="row gy-4 portfolio-container" data-aos="fade-up" data-aos-delay="200">
 
-            <div class="col-lg-4 col-md-6 portfolio-item filter-design">
+            <div class="col-lg-4 col-md-6 portfolio-item filter-celik">
               <div class="portfolio-content h-100">
-                <img src="assets/img/nadstresnica/4.png" class="img-fluid" alt="">
-                <div class="portfolio-info">
-                  <h4>Remodeling 1</h4>
-                  <p>Lorem ipsum, dolor sit amet consectetur</p>
-                  <a href="assets/img/nadstresnica/4.png" title="Čelična nadstrešnica" data-gallery="portfolio-gallery-design" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="project-details.html" title="Više detalja" class="details-link"><i class="bi bi-link-45deg"></i></a>
-                </div>
-              </div>
-            </div><!-- End Projects Item -->
-
-
-            <div class="col-lg-4 col-md-6 portfolio-item filter-construction">
-              <div class="portfolio-content h-100">
-                <img src="assets/img/projects/construction-1.jpg" class="img-fluid" alt="">
-                <div class="portfolio-info">
-                  <h4>Construction 1</h4>
-                  <p>Lorem ipsum, dolor sit amet consectetur</p>
-                  <a href="assets/img/projects/construction-1.jpg" title="Construction 1" data-gallery="portfolio-gallery-construction" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="project-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
-                </div>
-              </div>
-            </div><!-- End Projects Item -->
-
-            <div class="col-lg-4 col-md-6 portfolio-item filter-repairs">
-              <div class="portfolio-content h-100">
-                <img src="assets/img/projects/repairs-1.jpg" class="img-fluid" alt="">
-                <div class="portfolio-info">
-                  <h4>Repairs 1</h4>
-                  <p>Lorem ipsum, dolor sit amet consectetur</p>
-                  <a href="assets/img/projects/repairs-1.jpg" title="Repairs 1" data-gallery="portfolio-gallery-repairs" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="project-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
-                </div>
-              </div>
-            </div><!-- End Projects Item -->
-
-            <div class="col-lg-4 col-md-6 portfolio-item filter-design">
-              <div class="portfolio-content h-100">
-                <img src="assets/img/projects/design-1.jpg" class="img-fluid" alt="">
-                <div class="portfolio-info">
-                  <h4>Design 1</h4>
-                  <p>Lorem ipsum, dolor sit amet consectetur</p>
-                  <a href="assets/img/projects/design-1.jpg" title="Repairs 1" data-gallery="portfolio-gallery-book" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="project-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
-                </div>
-              </div>
-            </div><!-- End Projects Item -->
-
-            <div class="col-lg-4 col-md-6 portfolio-item filter-remodeling">
-              <div class="portfolio-content h-100">
-                <img src="assets/img/projects/remodeling-2.jpg" class="img-fluid" alt="">
-                <div class="portfolio-info">
-                  <h4>Remodeling 2</h4>
-                  <p>Lorem ipsum, dolor sit amet consectetur</p>
-                  <a href="assets/img/projects/remodeling-2.jpg" title="Remodeling 2" data-gallery="portfolio-gallery-remodeling" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="project-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
-                </div>
-              </div>
-            </div><!-- End Projects Item -->
-
-            <div class="col-lg-4 col-md-6 portfolio-item filter-construction">
-              <div class="portfolio-content h-100">
-                <img src="assets/img/projects/construction-2.jpg" class="img-fluid" alt="">
-                <div class="portfolio-info">
-                  <h4>Construction 2</h4>
-                  <p>Lorem ipsum, dolor sit amet consectetur</p>
-                  <a href="assets/img/projects/construction-2.jpg" title="Construction 2" data-gallery="portfolio-gallery-construction" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="project-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
-                </div>
-              </div>
-            </div><!-- End Projects Item -->
-
-            <div class="col-lg-4 col-md-6 portfolio-item filter-repairs">
-              <div class="portfolio-content h-100">
-                <img src="assets/img/projects/repairs-2.jpg" class="img-fluid" alt="">
-                <div class="portfolio-info">
-                  <h4>Repairs 2</h4>
-                  <p>Lorem ipsum, dolor sit amet consectetur</p>
-                  <a href="assets/img/projects/repairs-2.jpg" title="Repairs 2" data-gallery="portfolio-gallery-repairs" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="project-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
-                </div>
-              </div>
-            </div><!-- End Projects Item -->
-
-            <div class="col-lg-4 col-md-6 portfolio-item filter-design">
-              <div class="portfolio-content h-100">
-                <img src="assets/img/projects/design-2.jpg" class="img-fluid" alt="">
-                <div class="portfolio-info">
-                  <h4>Design 2</h4>
-                  <p>Lorem ipsum, dolor sit amet consectetur</p>
-                  <a href="assets/img/projects/design-2.jpg" title="Repairs 2" data-gallery="portfolio-gallery-book" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="project-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
-                </div>
-              </div>
-            </div><!-- End Projects Item -->
-
-            <div class="col-lg-4 col-md-6 portfolio-item filter-remodeling">
-              <div class="portfolio-content h-100">
-                <img src="assets/img/projects/remodeling-3.jpg" class="img-fluid" alt="">
-                <div class="portfolio-info">
-                  <h4>Remodeling 3</h4>
-                  <p>Lorem ipsum, dolor sit amet consectetur</p>
-                  <a href="assets/img/projects/remodeling-3.jpg" title="Remodeling 3" data-gallery="portfolio-gallery-remodeling" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="project-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
-                </div>
-              </div>
-            </div><!-- End Projects Item -->
-
-            <div class="col-lg-4 col-md-6 portfolio-item filter-construction">
-              <div class="portfolio-content h-100">
-                <img src="assets/img/projects/construction-3.jpg" class="img-fluid" alt="">
-                <div class="portfolio-info">
-                  <h4>Construction 3</h4>
-                  <p>Lorem ipsum, dolor sit amet consectetur</p>
-                  <a href="assets/img/projects/construction-3.jpg" title="Construction 3" data-gallery="portfolio-gallery-construction" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="project-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
-                </div>
-              </div>
-            </div><!-- End Projects Item -->
-
-            <div class="col-lg-4 col-md-6 portfolio-item filter-repairs">
-              <div class="portfolio-content h-100">
-                <img src="assets/img/projects/repairs-3.jpg" class="img-fluid" alt="">
-                <div class="portfolio-info">
-                  <h4>Repairs 3</h4>
-                  <p>Lorem ipsum, dolor sit amet consectetur</p>
-                  <a href="assets/img/projects/repairs-3.jpg" title="Repairs 2" data-gallery="portfolio-gallery-repairs" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="project-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
-                </div>
-              </div>
-            </div><!-- End Projects Item -->
-
-            <div class="col-lg-4 col-md-6 portfolio-item filter-design">
-              <div class="portfolio-content h-100">
-                <img src="assets/img/projects/design-3.jpg" class="img-fluid" alt="">
-                <div class="portfolio-info">
-                  <h4>Design 3</h4>
-                  <p>Lorem ipsum, dolor sit amet consectetur</p>
-                  <a href="assets/img/projects/design-3.jpg" title="Repairs 3" data-gallery="portfolio-gallery-book" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="project-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
-                </div>
-              </div>
-            </div><!-- End Projects Item -->
-
-            <div class="col-lg-4 col-md-6 portfolio-item filter-visualizations">
-              <div class="portfolio-content h-100">
-                <img src="assets/img/hala1/4.jpg" class="img-fluid" alt="">
+                <img src="assets/img/projects/hala1/4.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Hala 1</h4>
-                  <p>Lorem ipsum, dolor sit amet consectetur</p>
-                  <a href="assets/img/hala1/4.jpg" title="3D vizuelizacija hale" data-gallery="portfolio-gallery-visualizations" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <p>3D arhitektura hale</p>
+                  <a href="assets/img/projects/hala1/4.jpg" title="3D arhitektura hale" data-gallery="portfolio-gallery-celik" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="project-details.html" title="Više detalja" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
+            </div><!-- End Projects Item -->
+
+            <div class="col-lg-4 col-md-6 portfolio-item filter-celik">
+              <div class="portfolio-content h-100">
+                <img src="assets/img/projects/nadstresnica/4.png" class="img-fluid" alt="">
+                <div class="portfolio-info">
+                  <h4>Nadstrešnica</h4>
+                  <p>Konstrukcijsko rešenje nadstrešnice</p>
+                  <a href="assets/img/projects/nadstresnica/4.png" title="Nadstrešnica" data-gallery="portfolio-gallery-celik" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="project-details.html" title="Više detalja" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                </div>
+              </div>
+            </div><!-- End Projects Item -->
+
+            <div class="col-lg-4 col-md-6 portfolio-item filter-celik">
+              <div class="portfolio-content h-100">
+                <img src="assets/img/projects/hala2/FB_IMG_1738919768674.jpg" class="img-fluid" alt="">
+                <div class="portfolio-info">
+                  <h4>Hala 2</h4>
+                  <p>3D konstrukcija hale</p>
+                  <a href="assets/img/projects/hala2/FB_IMG_1738919768674.jpg" title="3D konstrukcija hale" data-gallery="portfolio-gallery-celik" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="project-details.html" title="Više detalja" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                </div>
+              </div>
+            </div><!-- End Projects Item -->
+
+            <div class="col-lg-4 col-md-6 portfolio-item filter-beton">
+              <p>Novi projekti su u toku...</p>
+            </div><!-- End Projects Item -->
+
+            <div class="col-lg-4 col-md-6 portfolio-item filter-montazni">
+              <p>Novi projekti su u toku...</p>
+            </div><!-- End Projects Item -->
+
+            <div class="col-lg-4 col-md-6 portfolio-item filter-sanacije">
+              <p>Novi projekti su u toku...</p>
+            </div><!-- End Projects Item -->
+
+            <div class="col-lg-4 col-md-6 portfolio-item filter-vizualizacije">
+              <p>Novi projekti su u toku...</p>
             </div><!-- End Projects Item -->
 
           </div><!-- End Projects Container -->
