dodate stranice sa detaljima projekata

--- a/contact.html
+++ b/contact.html
@@ -52,17 +52,17 @@
           <!--<li><a href="projects.html">Projekti</a></li>-->
           <li class="dropdown"><a href="#"><span>Projekti</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
             <ul>
-              <li><a href="#">Montažni objekti</a></li>
+              <li><a href="project-details-default.html">Montažni objekti</a></li>
               <li class="dropdown"><a href="#"><span>Čelične konstrukcije</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
                 <ul>
-                  <li><a href="#">Hala - 3D arhitektura</a></li>
-                  <li><a href="#">Hala - 3D konstrukcija</a></li>
-                  <li><a href="#">Čelična nadstrešnica</a></li>
+                  <li><a href="project-details-2.html">Hala - 3D arhitektura</a></li>
+                  <li><a href="project-details-3.html">Hala - 3D konstrukcija</a></li>
+                  <li><a href="project-details-1.html">Čelična nadstrešnica</a></li>
                 </ul>
               </li>
-              <li><a href="#">Betonske konstrukcije</a></li>
-              <li><a href="#">Sanacije i reparature</a></li>
-              <li><a href="#">3D vizuelizacija enterijera i eksterijera</a></li>
+              <li><a href="project-details-default.html">Betonske konstrukcije</a></li>
+              <li><a href="project-details-default.html">Sanacije i reparature</a></li>
+              <li><a href="project-details-default.html">3D vizuelizacija enterijera i eksterijera</a></li>
             </ul>
           </li>
           <li><a href="about.html">O nama</a></li>
