--- a/projects.html
+++ b/projects.html
@@ -50,17 +50,17 @@
           <li><a href="services.html">Usluge</a></li>
           <li class="dropdown"><a href="#"><span>Projekti</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
             <ul>
-              <li><a href="#">Montažni objekti</a></li>
+              <li><a href="project-details-default.html">Montažni objekti</a></li>
               <li class="dropdown"><a href="#"><span>Čelične konstrukcije</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
                 <ul>
-                  <li><a href="#">Hala - 3D arhitektura</a></li>
-                  <li><a href="#">Hala - 3D konstrukcija</a></li>
-                  <li><a href="#">Čelična nadstrešnica</a></li>
+                  <li><a href="project-details-2.html">Hala - 3D arhitektura</a></li>
+                  <li><a href="project-details-3.html">Hala - 3D konstrukcija</a></li>
+                  <li><a href="project-details-1.html">Čelična nadstrešnica</a></li>
                 </ul>
               </li>
-              <li><a href="#">Betonske konstrukcije</a></li>
-              <li><a href="#">Sanacije i reparature</a></li>
-              <li><a href="#">3D vizuelizacija enterijera i eksterijera</a></li>
+              <li><a href="project-details-default.html">Betonske konstrukcije</a></li>
+              <li><a href="project-details-default.html">Sanacije i reparature</a></li>
+              <li><a href="project-details-default.html">3D vizuelizacija enterijera i eksterijera</a></li>
             </ul>
           </li>
           <li><a href="about.html">O nama</a></li>
@@ -110,7 +110,7 @@
                   <h4>Nadstrešnica</h4>
                   <p>Konstrukcijsko rešenje nadstrešnice</p>
                   <a href="assets/img/projects/nadstresnica/4.png" title="Nadstrešnica" data-gallery="portfolio-gallery-celik" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="project-details.html" title="Više detalja" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <a href="project-details-1.html" title="Više detalja" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div><!-- End Projects Item -->
@@ -122,7 +122,7 @@
                   <h4>Hala 1</h4>
                   <p>3D arhitektura hale</p>
                   <a href="assets/img/projects/hala1/4.jpg" title="3D arhitektura hale" data-gallery="portfolio-gallery-celik" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="project-details.html" title="Više detalja" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <a href="project-details-2.html" title="Više detalja" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div><!-- End Projects Item -->
@@ -134,7 +134,7 @@
                   <h4>Hala 2</h4>
                   <p>3D konstrukcija hale</p>
                   <a href="assets/img/projects/hala2/FB_IMG_1738919768674.jpg" title="3D konstrukcija hale" data-gallery="portfolio-gallery-celik" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="project-details.html" title="Više detalja" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <a href="project-details-3.html" title="Više detalja" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div><!-- End Projects Item -->
