Rad na stranici sa uslugama

--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
               </div>
               <h3>Arhitektura</h3>
               <p>Obuhvata sve faze arhitektonskog projektovanja – od idejnog rešenja i koncepta, preko izrade glavnog projekta, do tehničke dokumentacije za izvođenje. Naš tim arhitekata kombinuje funkcionalnost, estetiku i održivost kako bi stvorio savremene i prilagođene objekte.</p>
-              <a href="service-details.html" class="readmore stretched-link">Saznajte više <i class="bi bi-arrow-right"></i></a>
+              <a href="services.html#arhitektura" class="readmore stretched-link">Saznajte više <i class="bi bi-arrow-right"></i></a>
             </div>
           </div><!-- End Service Item -->
 
@@ -267,7 +267,7 @@
               </div>
               <h3>Konstrukcija</h3>
               <p>Projektovanje nosivih konstrukcija – betonskih, čeličnih, drvenih i montažnih. Primenjujemo najnovije standarde i softvere za proračun statike i dinamike kako bismo obezbedili sigurnost i ekonomičnost konstrukcije.</p>
-              <a href="service-details.html" class="readmore stretched-link">Saznajte više <i class="bi bi-arrow-right"></i></a>
+              <a href="services.html#konstrukcija" class="readmore stretched-link">Saznajte više <i class="bi bi-arrow-right"></i></a>
             </div>
           </div><!-- End Service Item -->
 
@@ -278,7 +278,7 @@
               </div>
               <h3>Dokumentacija</h3>
               <p>Kompletna projektna dokumentacija prilagođena zakonskim zahtevima i potrebama investitora. Uključuje idejni, glavni i izvedbeni projekat, kao i potrebne saglasnosti i dozvole.</p>
-              <a href="service-details.html" class="readmore stretched-link">Saznajte više <i class="bi bi-arrow-right"></i></a>
+              <a href="services.html#dokumentacija" class="readmore stretched-link">Saznajte više <i class="bi bi-arrow-right"></i></a>
             </div>
           </div><!-- End Service Item -->
 
@@ -289,7 +289,7 @@
               </div>
               <h3>Procena troškova</h3>
               <p>Precizno i detaljno sastavljanje predmera radova i materijala, kao i finansijskih procena, koje omogućavaju pravovremeno planiranje i kontrolu troškova.</p>
-              <a href="service-details.html" class="readmore stretched-link">Saznajte više <i class="bi bi-arrow-right"></i></a>
+              <a href="services.html#troskovi" class="readmore stretched-link">Saznajte više <i class="bi bi-arrow-right"></i></a>
             </div>
           </div><!-- End Service Item -->
 
@@ -306,7 +306,7 @@
               </div>
               <h3>3D vizuelizacija</h3>
               <p>Napredne 3D vizualizacije i BIM modeli koji omogućavaju investitorima i izvođačima jasnu predstavu o projektu. Olakšavaju komunikaciju i identifikaciju potencijalnih problema pre početka radova.</p>
-              <a href="service-details.html" class="readmore stretched-link">Saznajte više <i class="bi bi-arrow-right"></i></a>
+              <a href="services.html#vizuelizacija" class="readmore stretched-link">Saznajte više <i class="bi bi-arrow-right"></i></a>
             </div>
           </div><!-- End Service Item -->
 
@@ -317,7 +317,7 @@
               </div>
               <h3>Izvođenje radova</h3>
               <p>Organizacija i upravljanje građevinskim radovima, kontrola kvaliteta i rokova, kao i koordinacija svih učesnika na gradilištu.</p>
-              <a href="service-details.html" class="readmore stretched-link">Saznajte više <i class="bi bi-arrow-right"></i></a>
+              <a href="services.html#izvodjenje" class="readmore stretched-link">Saznajte više <i class="bi bi-arrow-right"></i></a>
             </div>
           </div><!-- End Service Item -->
 
@@ -328,7 +328,7 @@
               </div>
               <h3>Tehnički nadzor</h3>
               <p>Stručni građevinski nadzor tokom izvođenja radova kako bi se osigurao kvalitet, usklađenost sa projektom i standardima, te pravovremeno rešavanje tehničkih pitanja.</p>
-              <a href="service-details.html" class="readmore stretched-link">Saznajte više <i class="bi bi-arrow-right"></i></a>
+              <a href="services.html#nadzor" class="readmore stretched-link">Saznajte više <i class="bi bi-arrow-right"></i></a>
             </div>
           </div><!-- End Service Item -->
 
@@ -339,7 +339,7 @@
               </div>
               <h3>Prodaja materijala</h3>
               <p>Bavimo se prodajom visokokvalitetnih hidroizolacionih materijala za građevinsku industriju. Ponosni smo što smo jedini zvanični predstavnici u Evropi kompanije Great Ocean Waterproof Technology Co., Ltd., jedne od najvećih i najrenomiranijih kineskih fabrika u oblasti hidroizolacija.</p>
-              <a href="service-details.html" class="readmore stretched-link">Saznajte više <i class="bi bi-arrow-right"></i></a>
+              <a href="services.html#prodaja" class="readmore stretched-link">Saznajte više <i class="bi bi-arrow-right"></i></a>
             </div>
           </div><!-- End Service Item -->
           
